// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisqusComments when the component is in viewport should render the Disqus component 1`] = `
<div>
  <div>
    <discussionembed
      config="[object Object]"
      shortname="carloscuesta"
    />
  </div>
</div>
`;

exports[`DisqusComments when the component is not in viewport should not render the Disqus component 1`] = `
<div>
  <div />
</div>
`;
